--- a/components/Services/ServicesFrameCommon.module.css
+++ b/components/Services/ServicesFrameCommon.module.css
@@ -113,7 +113,7 @@
 /* Skill name text */
 .skillName {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 /* Icons container */
