--- a/styles/global.css
+++ b/styles/global.css
@@ -43,7 +43,7 @@ h2 {
   letter-spacing: -0.00833em;
 }
 h3 {
-  font-size: 1.75rem;
+  font-size: 1.45rem;
   font-weight: 600;
   line-height: 1.3;
 }
